# hood-financial-pipeline

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt  take_screenshots.py
.github/workflows/: ci.yml
config/: __init__.py  config.py  scenarios.yaml
src/: build_excel_model.py  hood_data_transform.py  hood_sec_extract_v3.py  pipeline.py  validate_model.py
tests/: test_pipeline.py
