[project]
name = "hood-financial-pipeline"
version = "0.1.0"
description = "Financial data pipeline for HOOD (Robinhood) analysis"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
